# md-gpu-demo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  build.sh  programming.md  version.txt
.claude/skills/framebuffer-app/: SKILL.md
.github/workflows/: release.yml
desc/: app.json
examples/hello_text/: CMakeLists.txt  README.md  apply.sh  emul.c
rp/: build.sh
rp/src/: CMakeLists.txt  CMakePresets.json  audio.c  commemul.c  commemul.pio  demo_3d.c  demo_cojorotozoom.c  demo_menu.c  demo_parallax.c  demo_sprites.c  emul.c  fb.c  fb_blit.c  fb_blit_asm.S  fb_chunked.c  fb_chunked_asm.S  fb_font.c  ikbd.c  main.c  memmap_rp.ld  palette.c  romemul.c  romemul.pio  sdcard.c  select.c
rp/src/ff/: ffconf.h
rp/src/include/: audio.h  audio_sample.h  cart_shared.h  cojo_font.h  cojo_texture.h  commemul.h  constants.h  debug.h  demo.h  diego_sprite.h  emul.h  fb.h  fb_blit.h  fb_chunked.h  fb_font.h  font8x8.h  ikbd.h  palette.h  romemul.h  sdcard.h  select.h  sidecart_logo.h  sidecart_text.h  solid3d.h  sprites_data.h  target_firmware.h  uridium_surface.h
rp/src/settings/: settings.c
tools/: png_to_texture.py  wav_to_ym4.py
